@@ -23,77 +23,108 @@ if (strpos ($_SERVER['PHP_SELF'], 'check_login.php')) // Prevent direct access t
     include 'error.php';
 }
 
-function check_login ($db, $lang)
+function check_login ($db, $lang, $langvars, $stop_die = true)
 {
     // New database driven language entries
-    load_languages($db, $lang, array ('global_funcs', 'common', 'footer'), $langvars);
+    load_languages($db, $lang, array ('global_funcs', 'common', 'footer', 'self_destruct'), $langvars);
 
     $flag = 0;
 
-    if (!isset ($_SESSION['username']))
+    if (array_key_exists('username', $_SESSION) === false)
     {
         $_SESSION['username'] = null;
     }
 
-    if (!isset ($_SESSION['password']))
+    if (array_key_exists('password', $_SESSION) === false)
     {
         $_SESSION['password'] = null;
     }
 
-    $result1 = $db->Execute("SELECT * FROM {$db->prefix}ships WHERE email=? LIMIT 1", array ($_SESSION['username']));
-    db_op_result ($db, $result1, __LINE__, __FILE__);
-    $playerinfo = $result1->fields;
+    if (is_null($_SESSION['username']) == false && is_null($_SESSION['password']) == false)
+    {
+        $rs = $db->Execute("SELECT * FROM {$db->prefix}ships WHERE email=? LIMIT 1;", array ($_SESSION['username']));
+        db_op_result ($db, $rs, __LINE__, __FILE__);
+        if ($rs instanceof ADORecordSet && $rs->RecordCount() >0)
+        {
+            $playerinfo = $rs->fields;
 
-    // Initialize the hasher, with 8 (a base-2 log iteration count) for password stretching and without less-secure portable hashes for older systems
-    $hasher = new PasswordHash (8, false);
+            // Initialize the hasher, with 8 (a base-2 log iteration count) for password stretching and without less-secure portable hashes for older systems
+            $hasher = new PasswordHash (8, false);
 
-    // Check the password against the stored hashed password
-    $password_match = $hasher->CheckPassword ($_SESSION['password'], $playerinfo['password']);
+            // Check the password against the stored hashed password
+            $password_match = $hasher->CheckPassword ($_SESSION['password'], $playerinfo['password']);
 
-    // Check the cookie to see if username/password are empty - check password against database
-    if ($_SESSION['username'] === null || $_SESSION['password'] === null || !$password_match)
+            // Check the cookie to see if username/password are empty - check password against database
+            if ($password_match == true)
+            {
+                $ip = $_SERVER['REMOTE_ADDR'];
+                $stamp = date("Y-m-d H:i:s");
+                $timestamp['now']  = (int) strtotime ($stamp);
+                $timestamp['last'] = (int) strtotime ($playerinfo['last_login']);
+
+                // Update the players last_login ever 60 seconds to cut back SQL Queries.
+                if($timestamp['now'] >= ($timestamp['last'] +60))
+                {
+                    $update = $db->Execute("UPDATE {$db->prefix}ships SET last_login = ?, ip_address = ? WHERE ship_id = ?;", array ($stamp, $ip, $playerinfo['ship_id']));
+                    $_SESSION['last_activity'] = $timestamp['now']; // Reset the last activity time on the session so that the session renews - this is the replacement for the (now removed) update_cookie function.
+                }
+
+
+                // Check for destroyed ship
+                if ($playerinfo['ship_destroyed'] == "Y")
+                {
+                    // if the player has an escapepod, set the player up with a new ship
+                    if ($playerinfo['dev_escapepod'] == "Y")
+                    {
+                        include './header.php';
+                        $result2 = $db->Execute("UPDATE {$db->prefix}ships SET hull=0, engines=0, power=0, computer=0,sensors=0, beams=0, torp_launchers=0, torps=0, armor=0, armor_pts=100, cloak=0, shields=0, sector=0, ship_ore=0, ship_organics=0, ship_energy=1000, ship_colonists=0, ship_goods=0, ship_fighters=100, ship_damage=0, on_planet='N', dev_warpedit=0, dev_genesis=0, dev_beacon=0, dev_emerwarp=0, dev_escapepod='N', dev_fuelscoop='N', dev_minedeflector=0, ship_destroyed='N',dev_lssd='N' WHERE email=?", array ($_SESSION['username']));
+                        db_op_result ($db, $result2, __LINE__, __FILE__);
+                        echo str_replace("[here]", "<a href='main.php'>" . $langvars['l_here'] . "</a>", $langvars['l_login_died']);
+                        $flag = 1;
+                        include './footer.php';
+                    }
+                    else
+                    {
+                        if ($stop_die == true)
+                        {
+                            include './header.php';
+                            // if the player doesn't have an escapepod - they're dead, delete them. But we can't delete them yet.
+                            // (This prevents the self-distruct inherit bug)
+                            echo str_replace("[here]", "<a href='log.php'>" . ucfirst($langvars['l_here']) . "</a>", $langvars['l_global_died']) . "<br><br>" . $langvars['l_global_died2'];
+                            echo str_replace("[logout]", "<a href='logout.php'>" . $langvars['l_logout'] . "</a>", $langvars['l_die_please']);
+                            $flag = 1;
+                            include './footer.php';
+                        }
+                    }
+                }
+
+            }
+            else
+            {
+                $title = $langvars['l_error'];
+                include './header.php';
+                echo str_replace("[here]", "<a href='index.php'>" . $langvars['l_here'] . "</a>", $langvars['l_global_needlogin']);
+                include './footer.php';
+                $flag = 1;
+            }
+        }
+        else
+        {
+            $title = $langvars['l_error'];
+            include './header.php';
+            echo str_replace("[here]", "<a href='index.php'>" . $langvars['l_here'] . "</a>", $langvars['l_global_needlogin']);
+            include './footer.php';
+            $flag = 1;
+        }
+
+    }
+    else
     {
         $title = $langvars['l_error'];
         include './header.php';
         echo str_replace("[here]", "<a href='index.php'>" . $langvars['l_here'] . "</a>", $langvars['l_global_needlogin']);
         include './footer.php';
         $flag = 1;
-    }
-
-    if ($playerinfo)
-    {
-        $ip = $_SERVER['REMOTE_ADDR'];
-        $stamp = date("Y-m-d H:i:s");
-        $timestamp['now']  = (int) strtotime ($stamp);
-        $timestamp['last'] = (int) strtotime ($playerinfo['last_login']);
-
-        // Update the players last_login ever 60 seconds to cut back SQL Queries.
-        if($timestamp['now'] >= ($timestamp['last'] +60))
-        {
-            $update = $db->Execute("UPDATE {$db->prefix}ships SET last_login = ?, ip_address = ? WHERE ship_id = ?;", array ($stamp, $ip, $playerinfo['ship_id']));
-            $_SESSION['last_activity'] = $timestamp['now']; // Reset the last activity time on the session so that the session renews - this is the replacement for the (now removed) update_cookie function.
-        }
-    }
-
-    // Check for destroyed ship
-    if ($playerinfo['ship_destroyed'] == "Y")
-    {
-        // if the player has an escapepod, set the player up with a new ship
-        if ($playerinfo['dev_escapepod'] == "Y")
-        {
-            $result2 = $db->Execute("UPDATE {$db->prefix}ships SET hull=0, engines=0, power=0, computer=0,sensors=0, beams=0, torp_launchers=0, torps=0, armor=0, armor_pts=100, cloak=0, shields=0, sector=0, ship_ore=0, ship_organics=0, ship_energy=1000, ship_colonists=0, ship_goods=0, ship_fighters=100, ship_damage=0, on_planet='N', dev_warpedit=0, dev_genesis=0, dev_beacon=0, dev_emerwarp=0, dev_escapepod='N', dev_fuelscoop='N', dev_minedeflector=0, ship_destroyed='N',dev_lssd='N' WHERE email=?", array ($_SESSION['username']));
-            db_op_result ($db, $result2, __LINE__, __FILE__);
-            echo str_replace("[here]", "<a href='main.php'>" . $langvars['l_here'] . "</a>", $langvars['l_login_died']);
-            $flag = 1;
-        }
-        else
-        {
-            // if the player doesn't have an escapepod - they're dead, delete them. But we can't delete them yet.
-            // (This prevents the self-distruct inherit bug)
-            echo str_replace("[here]", "<a href='log.php'>" . ucfirst($langvars['l_here']) . "</a>", $langvars['l_global_died']) . "<br><br>" . $langvars['l_global_died2'];
-            echo str_replace("[logout]", "<a href='logout.php'>" . $langvars['l_logout'] . "</a>", $langvars['l_die_please']);
-            $flag = 1;
-        }
     }
 
     global $server_closed;
@@ -108,4 +139,5 @@ function check_login ($db, $lang)
 
     return $flag;
 }
+
 ?>
